# poc.rust

./: .gitignore  CLAUDE.md  Cargo.toml
axum-logger/: .env.example  Cargo.toml  README.md  docker-compose.yml
axum-logger/docker/clickhouse/: init.sql
axum-logger/docker/vector/: vector.yaml
axum-logger/logs/: app.log.2026-05-11-09
axum-logger/src/: main.rs
axum-logger/src/routes/: health.rs
axum-logger/src/utils/: logger.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: greeter.proto
grpc/src/: main.rs
logging/: Cargo.toml  docker-compose.yml
logging/logs/: promotion-engine.log.2026-05-11
logging/src/: lib.rs  main.rs
