[package]
name = "axum-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-nats = "0.38"
axum = "0.8.9"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
axum-test = "20.0.0"
